# Lpg2

./: .clang-format  CMakeLists.txt  LPG2.files  LPG2.includes  README.md  comments-and-refactoring-idea.lpg  configure.bat  configure.sh  format.sh  install_dependencies.sh  lcovrc  vcpkg-msvc.cmake  vcpkg_dependencies
benchmarks/: CMakeLists.txt  benchmarks.cpp
lpg2/: CMakeLists.txt  formatter.cpp  formatter.h  interpreter.cpp  interpreter.h  overloaded.h  parser.cpp  parser.h  program.cpp  program.h  tokenizer.cpp  tokenizer.h  type_checker.cpp  type_checker.h
tests/: CMakeLists.txt  test_formatter.cpp  test_interpreter.cpp  test_parser.cpp  test_tokenize.cpp  test_type_checker.cpp  tests.cpp
